Bug 78651 - FILESAVE: DOCX Export [Corrupt] of Consecutive tables
Summary: FILESAVE: DOCX Export [Corrupt] of Consecutive tables
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-13 07:14 UTC by Vinaya Mandke
Modified: 2014-05-20 17:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Large Issue File (250.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-13 07:19 UTC, Vinaya Mandke
Details
Optimized file (18.30 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-13 07:19 UTC, Vinaya Mandke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-05-13 07:14:08 UTC
1. Open file in LO
2. Round trip to DOCX
3. Open saved file in MS Word 2010

Actual Result:
File corrupts in MS Word 2010

Expects Result:
File must open correctly without any issue.
Comment 1 Vinaya Mandke 2014-05-13 07:19:09 UTC
Created attachment 98962 [details]
Large Issue File
Comment 2 Vinaya Mandke 2014-05-13 07:19:32 UTC
Created attachment 98963 [details]
Optimized file
Comment 3 Jorendc 2014-05-13 09:51:01 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha1+ Build ID: cc4a3f1a88afff114311bddf462ca4bc00a485c7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-05-12_09:05:53

Kind regards,
Joren
Comment 4 Commit Notification 2014-05-18 09:23:57 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d73c5d748363173e73861ba46fcba36f04a1122

fdo#78651 DOCX Incorrect export of nested Tables



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jorendc 2014-05-20 17:57:42 UTC
No corruption anymore, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: cd11bc699ac50af4f560ed5f2e5e7903de0898b8
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-05-20_08:02:54

Document opened using Word 2013.

Kind regards,
Joren