fdo#78651 DOCX Incorrect export of nested Tables

As the m_oldTableReference->m_pOldTablepInner was not cleared
the same tabled was incorrectly nested with itself.

Another issue was that the same table was mirrored in RT file
as LO was trying to export a Section break within a table cell.

Change-Id: I09b730a10f1a0bc4434050e0078aeab3185de817