sw/qa/extras/ooxmlexport/ooxmlexport.cxx
@@ -3338,6 +3338,16 @@ DECLARE_OOXMLEXPORT_TEST(testfdo78599,"fdo78599.docx")
     assertXPath ( pXmlDoc, "/w:document/w:body/w:p[1]/w:hyperlink/w:r[6]/w:fldChar", "fldCharType", "end" );
 }
 
+DECLARE_OOXMLEXPORT_TEST(testFdo78651, "fdo78651.docx")
+{
+    xmlDocPtr pXmlDoc = parseExport("word/document.xml");
+
+    if (!pXmlDoc)
+        return;
+    // ensure that there are only two tables
+    assertXPath(pXmlDoc, "//w:tbl", 2);
+}
+
 #endif
 
 CPPUNIT_PLUGIN_IMPLEMENT();
